kubernetes/deploy/home/media/gamarr/clusters/bastion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gamarr
  labels:
    app.kubernetes.io/name: gamarr
spec:
  selector:
    app.kubernetes.io/name: gamarr
  ports:
    - port: 5001
      targetPort: 5001
      name: http
  type: ClusterIP
